[package]
name = "spring-boot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
spring-context = { path = "../spring-context" }
spring-beans   = { path = "../spring-beans"   }
spring-macro   = { path = "../spring-macro"   }
inventory      = { workspace = true }
