[package]
name = "spring-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
spring-beans = { path = "../spring-beans" }
spring-core = { path = "../spring-core" }
spring-macro = {path = "../spring-macro"}